--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -118,3 +118,11 @@ button:hover {
 .footer .text-muted {
     color: #6c757d;
 }
+
+.description-short {
+    display: block;
+}
+
+.description-full {
+    display: none;
+}
