--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -7,6 +7,10 @@ body {
     background-color: #f8f8f8;
 }
 
+.text-primary {
+    color: #002D85 !important;
+}
+
 .sidebar {
     background-color: #f8f9fa;
     border-right: 1px solid #ddd;
@@ -125,4 +129,32 @@ button:hover {
 
 .description-full {
     display: none;
+}
+
+/* .fixed-navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1030; /* Memastikan navbar selalu di atas elemen lainnya 
+} */
+
+.sidebar .jarak {
+    margin-top: 15px; /* Jarak atas */
+    margin-bottom: 15px; /* Jarak bawah */
+}
+
+.sidebar .dashboard-logo {
+    width: auto; /* Sesuaikan ukuran logo */
+    height: 40px; /* Agar proporsi tetap */
+    margin-bottom: 0px; /* Jarak antara logo dan teks */
+    display: block; /* Pastikan logo muncul di atas teks */
+}
+
+.sidebar .nav-link span[data-feather] {
+    color: #002D85; /* Ganti dengan warna yang diinginkan */
+}
+
+.icon-dashboard {
+    color: #002D85; /* Warna untuk ikon Dashboard */
 }
