--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -33,3 +33,7 @@ img {
     display: block;
     margin: 0 auto;
 }
+
+body {
+    background-color: {{ \App\Models\Setting::first()->background_color }};
+}
