--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -14,6 +14,7 @@ body {
 .sidebar {
     background-color: #f8f9fa;
     border-right: 1px solid #ddd;
+    width: 220px;
 }
 
 .sidebar .nav-link {
@@ -146,15 +147,16 @@ button:hover {
 .sidebar .logo {
     margin-top: 15px; /* Jarak atas */
     margin-bottom: 15px; /* Jarak bawah */
+    padding: 20px;
 }
 
-.sidebar .logo {
+/* .sidebar .logo {
     padding: 20px 0;
-}
+} */
 
 .dashboard-logo {
     max-width: 100%; /* Sesuaikan dengan ukuran container */
-    height: auto;
+    /* height: auto; */
 }
 
 
@@ -258,3 +260,55 @@ button:hover {
     border-radius: 50%;
   }
   
+/* Footer fix */
+footer {
+    background-color: #f8f9fa;
+    padding: 1rem 0;
+    text-align: center;
+    width: 100%;
+}
+
+/* .container-fluid {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+} */
+
+.row.flex-grow-1 {
+    flex-grow: 1;
+}
+
+/*  Membuat Sidebar dan Navbar Posisinya Tetap */
+/* Sidebar fix */
+.sidebar-sticky {
+    position: fixed;
+    /* top: 0; */
+    /* left: 0; */
+    height: 100%;
+    z-index: 1000;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+/* Navbar fix */
+.fixed-navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1030;
+}
+
+/* Adjust for content when navbar and sidebar are fixed */
+.main-content {
+    margin-left: 200px; /* Sesuaikan dengan lebar sidebar */
+    padding-top: 70px; /* Sesuaikan dengan tinggi navbar */
+}
+
+
+
+.sidebar .nav-item.logo {
+    padding: 20px; /* Atur padding sesuai kebutuhan */
+    text-align: center; /* Pusatkan logo jika perlu */
+    flex: 0 0 auto; 
+}
+
