--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -40,11 +40,7 @@ body {
 }
 
 
-.main-content {
-    flex: 1;
-    margin-left: 250px;
-    padding: 20px;
-}
+
 
 .main-content h1 {
     font-size: 24px;
@@ -147,7 +143,7 @@ button:hover {
 .sidebar .logo {
     margin-top: 15px; /* Jarak atas */
     margin-bottom: 15px; /* Jarak bawah */
-    padding: 20px;
+
 }
 
 /* .sidebar .logo {
@@ -162,7 +158,7 @@ button:hover {
 
 .sidebar .dashboard-logo {
     width: auto; /* Sesuaikan ukuran logo */
-    height: 40px; /* Agar proporsi tetap */
+    height: 60px; /* Agar proporsi tetap */
     margin-bottom: 0px; /* Jarak antara logo dan teks */
     display: block; /* Pastikan logo muncul di atas teks */
 }
@@ -176,35 +172,7 @@ button:hover {
 }
 
 
-/* CSS for fixed sidebar and navbar */
-/* bisa fixed masih bermasalah  */
 
-/* .fixed-navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1030; /* Ensure it stays on top of other content 
-} */
-
-/* .sidebar {
-    position: fixed;
-    top: 56px; /* Height of the navbar 
-    left: 0;
-    height: calc(100% - 56px); /* Adjust height to account for navbar 
-    overflow-y: auto;
-    z-index: 1029; /* Keep below the navbar 
-}
-
-.container-fluid {
-    margin-top: 56px; /* Push content below the navbar 
-}
-
-.container {
-    margin-left: 250px; /* Adjust based on the sidebar width 
-    padding-top: 20px;
-}
- */
 
  /* CSS untuk switch */
 .switch {
@@ -287,7 +255,7 @@ footer {
     height: 100%;
     z-index: 1000;
     overflow-x: hidden;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 /* Navbar fix */
@@ -305,10 +273,27 @@ footer {
 }
 
 
+/* .main-content {
+    flex: 1;
+    margin-left: 250px;
+    padding: 20px;
+} */
 
-.sidebar .nav-item.logo {
-    padding: 20px; /* Atur padding sesuai kebutuhan */
-    text-align: center; /* Pusatkan logo jika perlu */
-    flex: 0 0 auto; 
-}
-
+.navbar-admin {
+    background: linear-gradient(to right, #002D85, #000A1F);
+    box-shadow: 0 4px 2px -2px gray;
+    border-radius: 0px;
+    margin: 0px 20px 0px 0px;
+    padding: 10px 20px 0px 20px;
+  }
+  
+  .welcome-message {
+    max-width: 70%;
+  }
+  
+  .profile-image {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+  }
+  
