--- a/public/css/beranda.css
+++ b/public/css/beranda.css
@@ -179,11 +179,6 @@ body {
     margin-right:  15px;
 }
 
-.kegiatan-image {
-    width: 100%; /* Pastikan gambar memenuhi lebar kontainer */
-    height: 400px; /* Atur tinggi gambar sesuai kebutuhan */
-    object-fit: cover; /* Memastikan gambar menyesuaikan ruang tanpa mengubah rasio */
-}
 
 /* Atur ukuran kartu kegiatan jika diperlukan */
 .news-card {
@@ -192,6 +187,14 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin: 20px;
 }
+
+.activity-card {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 
 .news-card img {
     border-top-left-radius: 15px;
@@ -251,10 +254,6 @@ body {
     padding-top: 110px;
 }
 
-.kegiatan-image {
-    height: 200px;
-    object-fit: cover;
-}
 
 .news-card {
     margin-bottom: 20px;
